--- a/ConnectedForm/MainWindow.xaml
+++ b/ConnectedForm/MainWindow.xaml
@@ -13,8 +13,8 @@
             <ColumnDefinition Width="0.5*" x:Name="firstColumn"/>
             <ColumnDefinition Width="0.5*" x:Name="secondColumn"/>
         </Grid.ColumnDefinitions>
-
-        <ScrollViewer x:Name="scroll0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Label Grid.Column="0" Height="30" VerticalAlignment="Top"/>
+        <ScrollViewer x:Name="scroll0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="0" Margin="0,30,0,0">
             <StackPanel x:Name="stackpanel0" Orientation="Vertical" Width="{Binding Width, ElementName=firstColumn}">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -22,17 +22,16 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" Width="30" Height="auto"/>
-
                     <Grid x:Name="gridforfunc0" Height="auto" VerticalAlignment="Top" Grid.Column="1">
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
                         <Button Grid.Row="0"/>
-
-                        <ListView Grid.Row="1" x:Name="listUsers0">
+                        <TextBox Grid.Row="1" TextChanged="TextBox_TextChanged"/>
+                        <ListView Grid.Row="2" x:Name="listUsers0">
 
                             <ListView.View>
                                 <GridView>
@@ -49,8 +48,8 @@
 
             </StackPanel>
         </ScrollViewer>
-
-        <ScrollViewer x:Name="scroll1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Label Grid.Column="1" Height="30" VerticalAlignment="Top"/>
+        <ScrollViewer x:Name="scroll1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="1" Margin="0,30,0,0">
             <StackPanel x:Name="stackpanel1" Orientation="Vertical" Height="auto" Width="{Binding Width, ElementName=secondColumn}">
 
                 <Grid>
@@ -61,20 +60,16 @@
 
 
 
-
-                    <Button Grid.Column="0" Width="30" Height="auto"/>
-
-
-
                     <Grid x:Name="gridforfunc1" Height="auto" Width="auto" VerticalAlignment="Top" Grid.Column="1">
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
                         <Button Grid.Row="0"/>
-
-                        <ListView Grid.Row="1" x:Name="listUsers1">
+                        <TextBox Grid.Row="1"/>
+                        <ListView Grid.Row="2" x:Name="listUsers1">
 
                             <ListView.View>
                                 <GridView>
