--- a/ConnectedForm/MainWindow.xaml
+++ b/ConnectedForm/MainWindow.xaml
@@ -13,16 +13,17 @@
             <ColumnDefinition Width="0.5*" x:Name="firstColumn"/>
             <ColumnDefinition Width="0.5*" x:Name="secondColumn"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Column="0" Height="30" VerticalAlignment="Top" x:Name="Labelip0"/>
-        <ScrollViewer x:Name="scroll0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="0" Margin="0,30,0,0">
-            <StackPanel x:Name="stackpanel0" Orientation="Vertical" Width="{Binding Width, ElementName=firstColumn}">
+        <Label Grid.Column="0" Height="30" VerticalAlignment="Top" x:Name="Labelip0"/>       
+           
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Grid x:Name="gridforfunc0" Height="auto" VerticalAlignment="Top" Grid.Column="1">
+                
+                
+                    <Grid x:Name="gridforfunc0" Height="auto" VerticalAlignment="Top" >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="30"/>
@@ -30,9 +31,11 @@
                         </Grid.RowDefinitions>
 
                         <Button x:Name="goback0" Grid.Row="0" HorizontalAlignment="Left" Width="15" Height="15" />
-                        <Button x:Name="gonext0" Grid.Row="0" HorizontalAlignment="Left" Width="15" Height="15" Margin="20,0,0,0"/>
+                        <Button x:Name="gonext0" Grid.Row="0" HorizontalAlignment="Left" Width="15" Height="15" Margin="20,0,0,0"/>                       
                         <TextBox x:Name="pathbox0" Grid.Row="1" TextChanged="TextBox_TextChanged"/>
-                        <ListView Grid.Row="2" x:Name="listUsers0" MouseDoubleClick="listUsers0_MouseDoubleClick">
+                <ScrollViewer Grid.Row="2" x:Name="scroll0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,0,0,0">
+                    <StackPanel  x:Name="stackpanel0" Orientation="Vertical" Width="{Binding Width, ElementName=firstColumn}">
+                        <ListView   x:Name="listUsers0" MouseDoubleClick="listUsers0_MouseDoubleClick">
 
                             <ListView.View>
                                 <GridView>
@@ -42,13 +45,14 @@
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                    </Grid>
+                    </StackPanel>
+                </ScrollViewer>
+            </Grid>
+            
 
+            </Grid>
 
-                </Grid>
-
-            </StackPanel>
-        </ScrollViewer>
+        
         <Label Grid.Column="1" Height="30" VerticalAlignment="Top" x:Name="LabelIp1"/>
         <ScrollViewer x:Name="scroll1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Grid.Column="1" Margin="0,30,0,0">
             <StackPanel x:Name="stackpanel1" Orientation="Vertical" Height="auto" Width="{Binding Width, ElementName=secondColumn}">
